--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,16 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+**[Bb]in/
+**[Oo]bj/
+
+
 
 # Visual Studio 2015 cache/options directory
 .vs/
+*/.vs
+.vscode/
+*/.vscode
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -232,3 +239,4 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+*appsettings*.json
